# aide

./: .gitignore  AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  mcp.rs
src-tauri/src/adapter/: mod.rs
src/components/: ConfigPanel.tsx  Editor.tsx  FileList.tsx  FileTree.tsx  MCPPage.tsx  SkillCard.tsx  SkillDetail.tsx  SkillGrid.tsx  SyncPanel.tsx
src/components/ui/: card.tsx  dialog.tsx
src/hooks/: useFileSystem.ts
src/lib/: fileUtils.ts
src/types/: index.ts
