[package]
name = "aide"
version = "0.1.0"
description = "AI development environment config manager"
authors = ["you"]
edition = "2021"

[lib]
name = "aide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
dirs = "6"
base64 = "0.22"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
